--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ color: #212121;
 }
 .logo-link{
     color: #2196F3;
-    font-family: Raleway;
+    font-family: Raleway, serif;
     font-size: 26px;
     font-weight: 700;
     letter-spacing: 0.78px;
@@ -19,19 +19,37 @@ color: #212121;
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 0.28px;
+    list-style: none;
+     }
+.header-link{
+    color: currentColor;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.28px;
+    list-style: none;
+    text-decoration: none;
+    list-style: none;
 }
 .header-link .link:hover,
 .header-link .link:focus{
     color: #2196F3;
-}
+   }
 .header-group-link{
     color: #757575;
+    list-style: none;
 }
+    
 .link.link:hover,
 .link.link:focus{
 color: #2196F3;
 }
-
+.header-link-current{
+    color: #2196F3;
+    text-decoration: none;
+  }
+.list{
+    list-style: none;
+}
 .profile-header{
 background-color: #2F303A;
 }
@@ -69,6 +87,9 @@ background-color: #2F303A;
     font-weight: 700;
     letter-spacing: 1.08px;
 }
+.team{
+    background-color: #F5F4FA;
+}
 .main-team-title{
     text-align: center;
     font-size: 36px;
@@ -96,6 +117,7 @@ background-color: #2F303A;
 }
 .address-list-link{
     color: rgba(255, 255, 255, 0.60);
+    list-style: none;
 }
 .footer{
     background: #2F303A;
@@ -119,6 +141,17 @@ background-color: #2F303A;
     background-color: #2196F3;
     color: #FFFFFF;
 }
+.btn-current{
+    color: #212121;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.63;
+    letter-spacing: 0.48px;
+    cursor: pointer;
+    background-color: #2196F3;
+    color: #FFFFFF;
+    }
 .portfoio-title{
     font-size: 18px;
     font-weight: 700;
