--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ background-color: #2F303A;
     text-align: center;
     font-size: 44px;
     font-weight: 900;
-    line-height: 1.36
+    line-height: 1.36;
     letter-spacing: 2.64px;
     text-transform: uppercase;
 }
@@ -112,7 +112,7 @@ background-color: #2F303A;
     font-style: normal;
     color: #FFFFFF;
     font-size: 14px;
-    line-height: 1.71
+    line-height: 1.71;
     letter-spacing: 0.42px;
 }
 .address-list-link{
@@ -125,15 +125,26 @@ background-color: #2F303A;
 .footer-logo-link-span{
     color: #FFF;;
 }
+.footer-link{
+    color: rgba(255, 255, 255, 0.60);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.71;
+    letter-spacing: 0.42px;
+    text-decoration: none;
+}
 
 .btn {
     color: #212121;
     text-align: center;
+    font-family: Roboto;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.63;
     letter-spacing: 0.48px;
     cursor: pointer;
+    background-color: #F5F4FA;
 
 }
 .btn.btn:hover,
@@ -152,7 +163,7 @@ background-color: #2F303A;
     background-color: #2196F3;
     color: #FFFFFF;
     }
-.portfoio-title{
+.portfolio-title{
     font-size: 18px;
     font-weight: 700;
     line-height: 2.0;
