--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,26 @@
+:root {
+    --main-font: Roboto, serif;
+    --secondary-font:Raleway ;
+
+    --accent-cl: #2196F3;
+    --main-text-cl:#212121;
+    --secondary-text-cl: #757575;
+    --white-text-cl:#FFFFFF;
+
+    --accent-bg-cl: #2196F3;
+    --main-bg-cl: #F5F4FA;
+    --secondary-bg-cl: #2F303A;
+
+}
 .body {
-font-family: Roboto;
-color: #212121;
+font-family:var(--main-font);
+color: var(--main-text-cl);
+font-size: 14px;
+letter-spacing: 0.28px;
 }
 .logo-link{
-    color: #2196F3;
-    font-family: Raleway, serif;
+    color: var(--accent-cl);
+    font-family: var(--secondary-font);
     font-size: 26px;
     font-weight: 700;
     letter-spacing: 0.78px;
@@ -21,6 +37,9 @@ color: #212121;
     letter-spacing: 0.28px;
     list-style: none;
      }
+.header{
+    background-color: #FFF;
+}
 .header-link{
     color: currentColor;
     font-size: 14px;
@@ -32,26 +51,26 @@ color: #212121;
 }
 .header-link .link:hover,
 .header-link .link:focus{
-    color: #2196F3;
+    color:var(--accent-cl);
    }
 .header-group-link{
-    color: #757575;
+    color:var(--secondary-text-cl);
     list-style: none;
 }
     
 .link.link:hover,
 .link.link:focus{
-color: #2196F3;
+color: var(--accent-cl);
 }
 .header-link-current{
-    color: #2196F3;
+    color: var(--accent-cl);
     text-decoration: none;
   }
 .list{
     list-style: none;
 }
 .profile-header{
-background-color: #2F303A;
+background-color: var(--secondary-bg-cl);
 }
 .profile-header-title{
     color: #FFF;
@@ -63,8 +82,8 @@ background-color: #2F303A;
     text-transform: uppercase;
 }
 .profile-header-btn{
-    background-color: #2196F3;
-    color: #FFFFFF;
+    background-color: var(--accent-bg-cl);
+    color: var(--white-text-cl);
     border-radius: 4px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     }
@@ -76,7 +95,7 @@ background-color: #2F303A;
     }
 
 .description{
-    color: #757575;
+    color: var(--secondary-text-cl);
     font-size: 14px;
     line-height: 1.71;
     letter-spacing:0.42px;
@@ -88,7 +107,7 @@ background-color: #2F303A;
     letter-spacing: 1.08px;
 }
 .team{
-    background-color: #F5F4FA;
+    background-color: var(--main-bg-cl);
 }
 .main-team-title{
     text-align: center;
@@ -103,14 +122,14 @@ background-color: #2F303A;
     letter-spacing: 0.48px;
 }
 .text{
-    color: #757575;
+    color:var(--secondary-text-cl);
     text-align: center;
     font-size: 16px;
     letter-spacing: 0.48px;
 }
 .address{
     font-style: normal;
-    color: #FFFFFF;
+    color:var(--white-text-cl);
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.42px;
@@ -120,13 +139,13 @@ background-color: #2F303A;
     list-style: none;
 }
 .footer{
-    background: #2F303A;
+    background: var(--secondary-bg-cl);
 }
 .footer-logo-link-span{
     color: #FFF;;
 }
 .footer-link{
-    color: rgba(255, 255, 255, 0.60);
+    color: rgba(255, 255, 255, 0.6);
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
@@ -136,41 +155,42 @@ background-color: #2F303A;
 }
 
 .btn {
-    color: #212121;
+    color: var(--main-text-cl);
     text-align: center;
-    font-family: Roboto;
+    font-family: var(--main-font);
     font-size: 16px;
     font-weight: 500;
     line-height: 1.63;
     letter-spacing: 0.48px;
     cursor: pointer;
-    background-color: #F5F4FA;
+    background-color: var(--main-bg-cl);
 
 }
 .btn.btn:hover,
 .btn.btn:focus{
-    background-color: #2196F3;
-    color: #FFFFFF;
+    background-color: var(--accent-bg-cl);
+    color:var(--white-text-cl);
 }
 .btn-current{
-    color: #212121;
+    color: var(--main-text-cl);
     text-align: center;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.63;
     letter-spacing: 0.48px;
     cursor: pointer;
-    background-color: #2196F3;
-    color: #FFFFFF;
+    background-color:var(--accent-bg-cl);
+    color:var(--white-text-cl);
     }
 .portfolio-title{
+    color: var(--main-font);
     font-size: 18px;
     font-weight: 700;
     line-height: 2.0;
     letter-spacing: 1.08px;
 }
 .portfolio-text{
-    color: #757575;
+    color: var(--secondary-text-cl);
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.48px;
