--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,34 @@ color: var(--main-text-cl);
 font-size: 14px;
 letter-spacing: 0.28px;
 }
+h1,h2,h,h4.h5,h6.p{
+    margin: 0;
+}
+img{
+    display: block;
+}
+
+.container{
+    outline: 1px solid red;
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+.header {
+    background-color: #FFF;
+}
+.header-container{
+    display: flex;
+    align-items: center;
+}
+
 .logo-link{
     color: var(--accent-cl);
     font-family: var(--secondary-font);
@@ -25,9 +53,50 @@ letter-spacing: 0.28px;
     font-weight: 700;
     letter-spacing: 0.78px;
     text-decoration: none;
+    margin-right: 93px;
+    display: block;
 }
 .logo-link-span{
     color: #000;
+}
+.header-link {
+    color: currentColor;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.28px;
+    text-decoration: none;
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    align-items: center;
+}
+.item {
+    margin-right: 50px;
+}
+
+.item:last-child {
+    margin-right: 0;
+}
+.header-link .link:hover,
+.header-link .link:focus {
+    color: var(--accent-cl);
+}
+.link.link:hover,
+.link.link:focus {
+    color: var(--accent-cl);
+}
+
+.header-link-current {
+    color: var(--accent-cl);
+    text-decoration: none;
+    display: block;
+    padding-top: 35px;
+        padding-bottom: 35px;
+}
+.header-email{
+margin-right: 50px;
+display: block;
 }
 .link {
     color: currentColor;
@@ -36,38 +105,23 @@ letter-spacing: 0.28px;
     font-weight: 500;
     letter-spacing: 0.28px;
     list-style: none;
+    align-items: center;
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    outline: 1px solid blueviolet;
      }
-.header{
-    background-color: #FFF;
-}
-.header-link{
-    color: currentColor;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 0.28px;
-    list-style: none;
-    text-decoration: none;
-    list-style: none;
-}
-.header-link .link:hover,
-.header-link .link:focus{
-    color:var(--accent-cl);
-   }
 .header-group-link{
     color:var(--secondary-text-cl);
     list-style: none;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
 }
-    
-.link.link:hover,
-.link.link:focus{
-color: var(--accent-cl);
-}
-.header-link-current{
-    color: var(--accent-cl);
-    text-decoration: none;
-  }
-.list{
+.list {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 .profile-header{
 background-color: var(--secondary-bg-cl);
@@ -80,13 +134,25 @@ background-color: var(--secondary-bg-cl);
     line-height: 1.36;
     letter-spacing: 2.64px;
     text-transform: uppercase;
+    padding-top: 200px;
+    padding-bottom: 30px;
+    width: 696px;
+  
+    
+
 }
 .profile-header-btn{
     background-color: var(--accent-bg-cl);
     color: var(--white-text-cl);
     border-radius: 4px;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    }
+    padding: 10px 32px;
+    max-width: 240px;
+    min-width: 216px;
+    min-height: 50px;
+    display: block;
+    padding-bottom: 200px;
+   }
 .spesifics-title{
     font-size: 14px;
     font-weight: 700;
@@ -140,6 +206,8 @@ background-color: var(--secondary-bg-cl);
 }
 .footer{
     background: var(--secondary-bg-cl);
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 .footer-logo-link-span{
     color: #FFF;;
@@ -183,7 +251,7 @@ background-color: var(--secondary-bg-cl);
     color:var(--white-text-cl);
     }
 .portfolio-title{
-    color: var(--main-font);
+    color: var(--main-text-cl);
     font-size: 18px;
     font-weight: 700;
     line-height: 2.0;
