--- a/css/styles.css
+++ b/css/styles.css
@@ -71,12 +71,9 @@ img{
     margin: 0;
     align-items: center;
 }
-.item {
-    margin-right: 50px;
-}
 
-.item:last-child {
-    margin-right: 0;
+.item:not(:last-child) {
+    margin-right: 50px;
 }
 .header-link .link:hover,
 .header-link .link:focus {
@@ -124,23 +121,21 @@ display: block;
     padding: 0;
 }
 .profile-header{
+    text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
 background-color: var(--secondary-bg-cl);
 }
 .profile-header-title{
     color: #FFF;
-    text-align: center;
     font-size: 44px;
     font-weight: 900;
     line-height: 1.36;
     letter-spacing: 2.64px;
     text-transform: uppercase;
-    padding-top: 200px;
     padding-bottom: 30px;
     width: 696px;
-  
-    
-
-}
+   }
 .profile-header-btn{
     background-color: var(--accent-bg-cl);
     color: var(--white-text-cl);
@@ -151,13 +146,15 @@ background-color: var(--secondary-bg-cl);
     min-width: 216px;
     min-height: 50px;
     display: block;
-    padding-bottom: 200px;
-   }
+      }
+     
 .spesifics-title{
     font-size: 14px;
     font-weight: 700;
     letter-spacing: 0.42px;
     text-transform: uppercase;
+  margin-top: 0px;
+  margin-bottom: 10px;
     }
 
 .description{
@@ -165,6 +162,8 @@ background-color: var(--secondary-bg-cl);
     font-size: 14px;
     line-height: 1.71;
     letter-spacing:0.42px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 .provide-title{
     text-align: center;
